Add phrasematcher cells

--- a/Noun Extraction From Job Advertisements Using Spacy.ipynb
+++ b/Noun Extraction From Job Advertisements Using Spacy.ipynb
@@ -2707,12 +2707,261 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "def calculate_top_1_similar_skill(eng_skills_list,comparison_word):\n",
+    "    # eng_skills_list is e.g. engineering_skills[55] \n",
+    "    word_string = convert_engineering_skills_to_string_for_vectors(eng_skills_list)\n",
+    "    vector_string = nlp(word_string)\n",
+    "    max_similarity = 0\n",
+    "    max_tuple = ()\n",
+    "    for word in vector_string:\n",
+    "        # If there is not vector for that word, go to the next word\n",
+    "        if word.vector[0] == .0:\n",
+    "            continue\n",
+    "        comparison_word_nlp = nlp(comparison_word)\n",
+    "        if comparison_word_nlp.vector[0] == .0:\n",
+    "            continue\n",
+    "        word_similarity = word.similarity(comparison_word_nlp)\n",
+    "        if word_similarity > max_similarity:\n",
+    "            max_similarity = word_similarity\n",
+    "            max_tuple = (word,max_similarity,comparison_word)\n",
+    "    return max_tuple"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "def calculate_top_1_similar_skill_new(eng_skills_list,comparison_word):\n",
+    "    # eng_skills_list is e.g. engineering_skills[55] \n",
+    "    word_string = convert_engineering_skills_to_string_for_vectors(eng_skills_list)\n",
+    "    vector_string = nlp_new(word_string)\n",
+    "    max_similarity = 0\n",
+    "    max_tuple = ()\n",
+    "    for word in vector_string:\n",
+    "        # If there is not vector for that word, go to the next word\n",
+    "        if word.vector[0] == .0:\n",
+    "            continue\n",
+    "        comparison_word_nlp = nlp_new(comparison_word)\n",
+    "        if comparison_word_nlp.vector[0] == .0:\n",
+    "            continue\n",
+    "        word_similarity = word.similarity(comparison_word_nlp)\n",
+    "        if word_similarity > max_similarity:\n",
+    "            max_similarity = word_similarity\n",
+    "            max_tuple = (word,max_similarity,comparison_word)\n",
+    "    return max_tuple"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "def calculate_top_1_similar_skill_for_list_base(eng_skills_list_of_lists,list_base,threshold):\n",
+    "    # Look through all of the 28100 jobs and check each word in these \n",
+    "    # to see if there are similar words in the skills/list_base and return\n",
+    "    # threshold is the percentage match in decimal format, e.g. 0.5 for matches to return\n",
+    "    list_base_counter = 0\n",
+    "    max_tuple = (\"string\",0,\"string\") # This is to hold the maximum match across all list_base skills searched\n",
+    "    # Start at 1 as 0 is the headers\n",
+    "    counter = 0\n",
+    "    for i in list_base:\n",
+    "        if counter == 0:\n",
+    "            counter += 1\n",
+    "            continue # Jump row 0 as this contains the headers, but still want the index below to match\n",
+    "        list_base_skill = list_base[list_base_counter] # change index back to just counter if breaks\n",
+    "        list_base_counter += 1\n",
+    "        for job in eng_skills_list_of_lists:\n",
+    "            comparison_tuple = ()\n",
+    "            comparison_tuple = calculate_top_1_similar_skill(job,list_base_skill)\n",
+    "            if len(comparison_tuple)>0 and comparison_tuple[1]>threshold:\n",
+    "                print(comparison_tuple)\n",
+    "                if comparison_tuple[1] > max_tuple[1]:\n",
+    "                    max_tuple = comparison_tuple\n",
+    "            counter += 1\n",
+    "            if counter % 2 == 0:\n",
+    "                break\n",
+    "    return max_tuple"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Entity recognition on 28100 jobs"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for ent in doc.ents:\n",
+    "    print(ent.text,ent.label_)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "# Find all phrases with a skills verb\n",
+    "\n",
+    "from spacy.matcher import Matcher\n",
+    "\n",
+    "# Use nlp_ult\n",
+    "matcher = Matcher(nlp.vocab)\n",
+    "# Add match ID \"HelloWorld\" with no callback and one pattern\n",
+    "pattern = [{},{},{\"ENT_TYPE\": \"skill\"},{},{},{},{},{}]\n",
+    "matcher.add(\"skill_phrase\", None, pattern)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "# Find the skills phrases in first ten jobs\n",
+    "job_no = 0\n",
+    "while job_no < 10:\n",
+    "    doc = nlp_ult(TEXTS[\"jobs\"][job_no]['text'])\n",
+    "    matches = matcher(doc)\n",
+    "    for match_id, start, end in matches:\n",
+    "        string_id = nlp.vocab.strings[match_id]  # Get string representation\n",
+    "        span = doc[start:end]  # The matched span\n",
+    "        #print(match_id, string_id, start, end, span.text)\n",
+    "        print(span.text)\n",
+    "    job_no += 1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "# Create a custom attribute on a Spcay token to check if a document is in the skills base\n",
+    "# Import Token\n",
+    "from spacy.tokens import Token\n",
+    "skill_getter = lambda token: token.text in (list_base) #(\"sql\", \"python\", \"MS Office\")\n",
+    "Token.set_extension(\"is_in_skills_base\", getter=skill_getter,force=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "# Now cycle through all jobs to find words either side of skills base words\n",
+    "doc = nlp_ult(\"The candidate will need to be qualified in sql as well as agronomy in python and MS Office\")\n",
+    "\n",
+    "# Up to job_no return all single word matches from the skills base\n",
+    "job_no = 0\n",
+    "skill_base_matches = [] # Holds the words from job add that match the skills base\n",
+    "while job_no < 10:\n",
+    "    doc = nlp_ult(TEXTS[\"jobs\"][job_no]['text'])\n",
+    "    skill_base_matches.append([])\n",
+    "    for i in doc:\n",
+    "        if i._.is_in_skills_base:\n",
+    "            skill_base_matches[-1].append(i.text)\n",
+    "            print(TEXTS[\"jobs\"][job_no]['text'].find(str(i)))\n",
+    "            print(TEXTS[\"jobs\"][job_no]['text'][1570:1620])\n",
+    "    job_no += 1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    ">>> conference_text = ('The candidate will need to be qualified in sql as well as agronomy in python and MS Office')\n",
+    ">>> conference_doc = nlp_ult(conference_text)\n",
+    ">>> # Extract Noun Phrases\n",
+    ">>> for chunk in conference_doc.noun_chunks:\n",
+    "...     print (chunk,ents)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "# Create a container with all words in it\n",
+    "\n",
+    "import json\n",
+    "new_container = []\n",
+    "with open(\"a2.jsonl\") as f: \n",
+    "    TEXTS = json.loads(f.read()) \n",
+    "counter = 0\n",
+    "\n",
+    "# For every word in every job add it to final_container\n",
+    "\n",
+    "final_container = []\n",
+    "\n",
+    "counter = 1 # Counts the job number we are up to\n",
+    "jobs = TEXTS[\"jobs\"]\n",
+    "number_jobs = len(jobs) # How many jobs there are in the file\n",
+    "\n",
+    "while counter < 1000: #number_jobs:\n",
+    "    job_text = TEXTS[\"jobs\"][counter]['text'].split()\n",
+    "    final_container.append(job_text)\n",
+    "    counter+=1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "\n",
+    "counter = 0\n",
+    "number_of_jobs = len(final_container)\n",
+    "ultimate_list = []\n",
+    "\n",
+    "while counter < len(final_container):\n",
+    "    ultimate_list.append(final_container[counter])\n",
+    "    counter += 1\n",
+    "    \n",
+    "list1 = ultimate_list\n",
+    "df = pd.DataFrame(list1)\n",
+    "\n",
+    "df.to_csv('new_entries.csv', index=True)\n",
+    "#df.to_csv('filename.csv', index=True)"
+   ]
   }
  ],
  "metadata": {
